# picktok

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml
lib/: Cargo.toml
lib/proc_macros/: Cargo.toml
lib/proc_macros/src/: lib.rs
lib/src/: alt.rs  lib.rs  tuple.rs
lib/tests/: tests.rs
src/: lib.rs  permutation.rs
tests/: tests.rs
